# ChangeLog for app-emacs/python-mode
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/python-mode/ChangeLog,v 1.58 2012/03/02 20:48:46 ranger Exp $

  02 Mar 2012; Brent Baude <ranger@gentoo.org> python-mode-5.2.0.ebuild:
  Marking python-mode-5.2.0 ppc64 for bug 391725

  06 Jan 2012; Brent Baude <ranger@gentoo.org> python-mode-5.2.0.ebuild:
  Marking python-mode-5.2.0 ppc for bug 391725

  04 Dec 2011; Raúl Porcel <armin76@gentoo.org> python-mode-5.2.0.ebuild:
  arm/ia64/s390/sh/sparc/x86 stable wrt #391725

  03 Dec 2011; Ulrich Mueller <ulm@gentoo.org> python-mode-5.2.0.ebuild,
  python-mode-6.0.3-r1.ebuild:
  Make use of new elisp.eclass variable for removal of files.

  29 Nov 2011; Jeroen Roovers <jer@gentoo.org> python-mode-5.2.0.ebuild:
  Stable for HPPA (bug #391725).

  28 Nov 2011; Tony Vroon <chainsaw@gentoo.org> python-mode-5.2.0.ebuild:
  Marked stable on AMD64 based on arch testing by Elijah "Armageddon" El
  Lazkani & Agostino "ago" Sarubbo in bug #391725.

*python-mode-6.0.3-r1 (23 Nov 2011)

  23 Nov 2011; Ulrich Mueller <ulm@gentoo.org> -python-mode-6.0.3.ebuild,
  +python-mode-6.0.3-r1.ebuild, +files/python-mode-6.0.3-obsolete-vars.patch:
  Define obsolete variables properly, in order to prevent a crash with
  dev-python/ipython. Fixes bug 391403.

*python-mode-6.0.3 (21 Nov 2011)

  21 Nov 2011; Ulrich Mueller <ulm@gentoo.org> +python-mode-6.0.3.ebuild:
  Version bump.

*python-mode-5.2.0 (20 Feb 2011)

  20 Feb 2011; Ulrich Mueller <ulm@gentoo.org> +files/50python-mode-gentoo.el,
  python-mode-5.1.0.ebuild, +python-mode-5.2.0.ebuild:
  Version bump. Call elisp-site-regen in postinst phase, fixes bug 355451.

  12 Oct 2010; Ulrich Mueller <ulm@gentoo.org> -files/setup.py:
  Remove unused file, fixes bug 340705.

  30 Apr 2010; Fabian Groffen <grobian@gentoo.org> python-mode-5.1.0.ebuild:
  Marked ~x64-macos

  24 Nov 2009; Christian Faulhammer <fauli@gentoo.org>