@@ -1,11 +1,30 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 50python-mode-gentoo.el 483 RMD160 c4ed69e8c54d136cccc519cc1532c9264d476e46 SHA1 b44dea97686898f486fb6ccc99b6daef18bc203a SHA256 9959f3c731aa326f4f75fcbd0bb503633de8d16abf809bb0c4bdad6385f5b448
-AUX 60python-mode-gentoo-5.1.el 450 RMD160 8b4c89d20e03ad9a3d9630aea7b2f593b56925d6 SHA1 1be88ae56e1ca6fbe32f57652c84d8727606653a SHA256 cadced96767ac51a6d3228eefbfcc53c7bc49d9579ff6e99338c2c91bd5aa3dc
 AUX python-mode-6.0.3-obsolete-vars.patch 798 RMD160 1b90f31c63de5b52c99f61caa9b66f9a07791b6c SHA1 7c13bde5bc8dc49d91c7c9b4209f8aafe9830c2f SHA256 6cf5a35392d40f0312cbbcf496b97334833693ff845fdb3cf48d07f73c735011
-DIST python-mode-5.1.0.el.bz2 37743 RMD160 df04f1ae210dc1eba4f43d80c4e1cabd930b53c5 SHA1 e58ed01bc7e63d6be76e9d65642e6245f15b27c1 SHA256 e9db2017996b6dbfb4fdb4fd725cd86a043990616bac981160c3118bd352633c
 DIST python-mode-5.2.0.tgz 73566 RMD160 fc6d649f4c85a275b714b2a1ba8fa5cfb13cea7a SHA1 f5a8e8ee5bcfef7df329a99f24106a77fe1e5b7b SHA256 84ee977fb7c639bc96cd4e8db0145c7a182489456e4d95a71c3612258b5013ac
 DIST python-mode.el-6.0.3.tar.gz 134816 RMD160 09a29896fd759ec1d928e4ce922b0a8cbd62a328 SHA1 2aac9464fe9690b00f94c2ea5debf3a5bb1b2884 SHA256 ea58b4aa944ee4c81041b5124cd552800a694b90bed9ba38f5dde673eaad06fa
-EBUILD python-mode-5.1.0.ebuild 806 RMD160 1bbdd57608c0eb850abf5af45e748c1114aedf16 SHA1 e78294debc30267b86a21778b6f0c9083ceabf93 SHA256 f988db73d4cba7d621c2af9ca66a83ad027210a6d7ad9f65c0a80dd9c9fac3d7
+DIST python-mode.el-6.0.4.tar.gz 152308 RMD160 dc658f09f088458aab77cceaf90769c0ff62434c SHA1 c33c97415d638b18e2901fcc29cd11ea64dd93b3 SHA256 7b8c4b059d630b294d1a3ae8228c0bfb22a6a6239b362aaa3b36af1ad63869a6
 EBUILD python-mode-5.2.0.ebuild 891 RMD160 13e11782bf0c1b014f2d940754b8d75fda9def03 SHA1 371b4a82e4b90e5879c8da18bb354120ea827321 SHA256 f6f286913e8c0b812ac127c1046e90f25568af56cbd8e79c898dca5e19eefdf6
 EBUILD python-mode-6.0.3-r1.ebuild 917 RMD160 2e06da03dea9bf87fba1e3da912d91dd5bd0e2a3 SHA1 738b8f2307b95cd3f47c0d108e212e1581002edc SHA256 c46fbef1d9fdd6d6b743116550943adb0353e006723d294e4aaf86572eac515c
-MISC ChangeLog 7540 RMD160 3e089670e89bf6ccd07184dfe4f70639e91d0053 SHA1 fd78f8d9c0cfebfb054ee91ce54d1f951e115ab3 SHA256 8980b1e187f956fdb228958d0709c332e155ac6b2193d7181d52f5344cff16a3
+EBUILD python-mode-6.0.4.ebuild 873 RMD160 20550382116648ac2cceb1db606e4bc43e746f1f SHA1 955befb7b970a8b517a962d0758d5a96ae1c0f22 SHA256 51cf7c596ade165751a46e44e4636d9f4a624dc7e09b557a4abf649df95bef21
+MISC ChangeLog 7739 RMD160 dc29898f574020bc68d344ed8b10b8240b1c7519 SHA1 70e42a5f83af8b5956ada353c4e25ee66888fc2d SHA256 d7f65854d511b378a74b7963123ba935423266b6a044e8c8716bfe89bd0d4048
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPUWBaAAoJEDxpGckxwJCBCpAP/0uMcVTaltNv1/1kXxIhDL0s
+DfS3rz3vlsINbg9KNOalNyDpdTT1/+tqRDRZSdtzD04e/qG96zjHWeHhb/i3ssKL
+o+DXGpW9MJWHce8XGxZ0r3X7MchA9+dPQO4NqMohAejAqVZqKjwv3h8EMz0QTTm1
+TDAhljn8hU3pIHif8HaqQW34AhFlQSzC40Gvbp8YZvQ41Lkb66FVIqqqm9/CZ4qw
+6OKkxY/DFiKhtT2EGhGcqP4wy672WTaGJjO4UWXOprbtlVHpXcQVafDrsj13+I+m
+cuwT+s1jOck7XWZ0IAG1yMbdIvr+JJ2et3gqrYPSNCIYp9A4c1z61zpFKvOFdvJJ
+30iqO1P3OpzRmHyXriIpMVGwNvhcUjd34ZpZiQ96bcLobodB8NxSY5V5xiCLJJjM
+e9I6c5C4NLcOqSFPFx9rCJwpAIvWUCcbpJrr261bJK5MihDeTTTA12/CBa7tOciv
+sI76mE4aGrHklUqhBhnU3XPcjAzHtNooQuo9/t2YgpVxlwMlsf7uECRhHMpxqiJ7
+VygKU+iVzENuIAIkU8cdzAOSEOsDeQXV9D23jSuIaYLM+dp2zLIh6AFJmjnHV4oy
+/8J+8oJ3ot2ugMe6o84F6OOymbcJoHelWHtXdCcLGFh1/P6s0dYM7xQg6GVwNUL5
+pXNO9LoX3to8AgbBvZEe
+=RyP+
+-----END PGP SIGNATURE-----
